[workspace]
members = [
    # EDR
    "crates/block/api",
    "crates/block/builder/api",
    "crates/block/header",
    "crates/block/local",
    "crates/block/miner",
    "crates/block/remote",
    "crates/block/storage",
    "crates/blockchain/api",
    "crates/blockchain/fork",
    "crates/blockchain/local",
    "crates/blockchain/remote",
    "crates/chain/config",
    "crates/chain/spec/block",
    "crates/chain/spec/evm",
    "crates/chain/spec/provider",
    "crates/chain/spec/receipt",
    "crates/database/components",
    "crates/edr_chain_l1",
    "crates/edr_chain_spec",
    "crates/edr_common",
    "crates/edr_coverage",
    "crates/edr_defaults",
    "crates/edr_eth",
    "crates/edr_gas_report",
    "crates/edr_instrument",
    "crates/edr_macros",
    "crates/edr_napi",
    "crates/edr_op",
    "crates/edr_provider",
    "crates/edr_receipt",
    "crates/edr_rpc_client",
    "crates/edr_rpc_eth",
    "crates/edr_rpc_spec",
    "crates/edr_runtime",
    "crates/edr_scenarios",
    "crates/edr_signer",
    "crates/edr_solidity",
    "crates/edr_solidity_tests",
    "crates/edr_test_utils",
    "crates/edr_transaction",
    "crates/eips/1559",
    "crates/eips/2930",
    "crates/eips/4844",
    "crates/eips/7702",
    "crates/evm",
    "crates/mem_pool",
    "crates/precompile",
    "crates/primitives",
    "crates/receipt/builder/api",
    "crates/state/api",
    "crates/state/fork",
    "crates/state/persistent_trie",
    "crates/state/remote",
    "crates/test/block_replay",
    "crates/test/blockchain",
    "crates/test/mem_pool",
    "crates/test/receipt",
    "crates/test/transaction",
    "crates/tool/cli",
    "crates/tool/op_chain_config_generator",
    "crates/tracing",
    "crates/trie",
    # Foundry
    "crates/foundry/cheatcodes",
    "crates/foundry/cheatcodes/spec",
    "crates/foundry/evm/core",
    "crates/foundry/evm/coverage",
    "crates/foundry/evm/evm",
    "crates/foundry/evm/fuzz",
    "crates/foundry/evm/traces",
]
resolver = "2"

[workspace.package]
version = "0.3.8"
edition = "2024"

[profile.dev]
rpath = true
# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
debug = 1

[profile.release]
# Optimized profile for released packages.
[profile.napi-publish]
inherits = "release"
rpath = true
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

# Speed up tests and dev build.
[profile.dev.package]
# Solc and artifacts
foundry-compilers.opt-level = 3
serde_json.opt-level = 3

# EVM
alloy-dyn-abi.opt-level = 3
alloy-json-abi.opt-level = 3
alloy-primitives.opt-level = 3
alloy-sol-type-parser.opt-level = 3
alloy-sol-types.opt-level = 3
keccak.opt-level = 3
revm-interpreter.opt-level = 3
revm-precompile.opt-level = 3
revm-primitives.opt-level = 3
revm.opt-level = 3
ruint.opt-level = 3
sha2.opt-level = 3
sha3.opt-level = 3
tiny-keccak.opt-level = 3
bitvec.opt-level = 3

# fuzzing
proptest.opt-level = 3
foundry-evm-fuzz.opt-level = 3

# keystores
scrypt.opt-level = 3

[workspace.dependencies]
edr_block_api = { path = "crates/block/api" }
edr_block_builder_api = { path = "crates/block/builder/api" }
edr_block_header = { path = "crates/block/header" }
edr_block_local = { path = "crates/block/local" }
edr_block_miner = { path = "crates/block/miner" }
edr_block_remote = { path = "crates/block/remote" }
edr_block_storage = { path = "crates/block/storage" }
edr_blockchain_api = { path = "crates/blockchain/api" }
edr_blockchain_fork = { path = "crates/blockchain/fork" }
edr_blockchain_local = { path = "crates/blockchain/local" }
edr_blockchain_remote = { path = "crates/blockchain/remote" }
edr_chain_config = { path = "crates/chain/config" }
edr_chain_l1 = { path = "crates/edr_chain_l1" }
edr_chain_spec = { path = "crates/edr_chain_spec" }
edr_chain_spec_block = { path = "crates/chain/spec/block" }
edr_chain_spec_evm = { path = "crates/chain/spec/evm" }
edr_chain_spec_provider = { path = "crates/chain/spec/provider" }
edr_chain_spec_receipt = { path = "crates/chain/spec/receipt" }
edr_common = { path = "crates/edr_common" }
edr_coverage = { path = "crates/edr_coverage" }
edr_database_components = { path = "crates/database/components" }
edr_defaults = { path = "crates/edr_defaults" }
edr_eip1559 = { path = "crates/eips/1559" }
edr_eip2930 = { path = "crates/eips/2930" }
edr_eip4844 = { path = "crates/eips/4844" }
edr_eip7702 = { path = "crates/eips/7702" }
edr_eth = { path = "crates/edr_eth" }
edr_evm = { path = "crates/evm" }
edr_gas_report = { path = "crates/edr_gas_report" }
edr_generic = { path = "crates/edr_generic" }
edr_instrument = { path = "crates/edr_instrument" }
edr_macros = { path = "crates/edr_macros" }
edr_mem_pool = { path = "crates/mem_pool" }
edr_napi_core = { path = "crates/edr_napi_core" }
edr_op = { path = "crates/edr_op" }
edr_primitives = { path = "crates/primitives" }
edr_precompile = { path = "crates/precompile" }
edr_provider = { path = "crates/edr_provider" }
edr_receipt = { path = "crates/edr_receipt" }
edr_receipt_builder_api = { path = "crates/receipt/builder/api" }
edr_rpc_client = { path = "crates/edr_rpc_client" }
edr_rpc_eth = { path = "crates/edr_rpc_eth" }
edr_rpc_spec = { path = "crates/edr_rpc_spec" }
edr_runtime = { path = "crates/edr_runtime" }
edr_scenarios = { path = "crates/edr_scenarios" }
edr_signer = { path = "crates/edr_signer" }
edr_solidity = { path = "crates/edr_solidity" }
edr_solidity_tests = { path = "crates/edr_solidity_tests" }
edr_state_api = { path = "crates/state/api" }
edr_state_fork = { path = "crates/state/fork" }
edr_state_persistent_trie = { path = "crates/state/persistent_trie" }
edr_state_remote = { path = "crates/state/remote" }
edr_test_receipt = { path = "crates/test/receipt" }
edr_test_block_replay = { path = "crates/test/block_replay" }
edr_test_blockchain = { path = "crates/test/blockchain" }
edr_test_mem_pool = { path = "crates/test/mem_pool" }
edr_test_transaction = { path = "crates/test/transaction" }
edr_test_utils = { path = "crates/edr_test_utils" }
edr_tracing = { path = "crates/tracing" }
edr_transaction = { path = "crates/edr_transaction" }
edr_trie = { path = "crates/trie" }
edr_utils = { path = "crates/edr_utils" }

foundry-cheatcodes = { path = "crates/foundry/cheatcodes" }
foundry-cheatcodes-spec = { path = "crates/foundry/cheatcodes/spec" }
foundry-evm = { path = "crates/foundry/evm/evm" }
foundry-evm-core = { path = "crates/foundry/evm/core" }
foundry-evm-coverage = { path = "crates/foundry/evm/coverage" }
foundry-evm-fuzz = { path = "crates/foundry/evm/fuzz" }
foundry-evm-traces = { path = "crates/foundry/evm/traces" }

# solc & compilation utilities
foundry-block-explorers = { version = "0.18.0", default-features = false }
foundry-compilers = { version = "0.18.0", default-features = false, features = [
    "svm-solc",
] }

## revm
op-revm = { version = "12.0.0", default-features = false, features = [
    "c-kzg",
    "dev",
    "serde",
    "std",
] }
revm = { version = "31.0.0", default-features = false, features = [
    "arbitrary",
    "blst",
    "c-kzg",
    "dev",
    "memory_limit",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
    "serde",
    "std",
] }
revm-bytecode = { version = "7.1.0", default-features = false, features = [
    "serde",
    "std",
] }
revm-context = { version = "11.0.0", default-features = false }
revm-context-interface = { version = "12.0.0", default-features = false }
revm-database-interface = { version = "8.0.4", default-features = false }
revm-handler = { version = "12.0.0", default-features = false }
revm-inspector = { version = "12.0.0", default-features = false }
revm-interpreter = { version = "29.0.0", default-features = false }
revm-precompile = { version = "29.0.0", default-features = false, features = [
    "blst",
    "c-kzg",
    "std",
] }
revm-primitives = { version = "21.0.1", default-features = false, features = [
    "hashbrown",
    "rand",
    "serde",
    "std",
] }
revm-state = { version = "8.1.0", default-features = false }
c-kzg = { version = "2.1.4", default-features = false, features = [
    "ethereum_kzg_settings",
] }

revm-inspectors = { version = "0.32.0", features = ["serde"] }
foundry-fork-db = "0.20"

## ethers
ethers-contract-abigen = { version = "2.0.14", default-features = false }

## alloy
alloy-consensus = { version = "1.0.22", default-features = false }
alloy-contract = { version = "1.0.22", default-features = false }
alloy-eips = { version = "1.0.22", default-features = false }
alloy-ens = { version = "1.0.22", default-features = false }
alloy-genesis = { version = "1.0.22", default-features = false }
alloy-hardforks = { version = "0.2.12", default-features = false }
alloy-json-rpc = { version = "1.0.22", default-features = false }
alloy-network = { version = "1.0.22", default-features = false }
alloy-node-bindings = { version = "0.13.0", default-features = false }
alloy-provider = { version = "1.0.22", default-features = false }
alloy-pubsub = { version = "1.0.22", default-features = false }
alloy-rpc-client = { version = "1.0.22", default-features = false }
alloy-rpc-types = { version = "1.0.22", default-features = false }
alloy-serde = { version = "1.0.22", default-features = false }
alloy-signer = { version = "1.0.22", default-features = false }
alloy-signer-aws = { version = "1.0.22", default-features = false }
alloy-signer-gcp = { version = "1.0.22", default-features = false }
alloy-signer-ledger = { version = "1.0.22", default-features = false }
alloy-signer-local = { version = "1.0.22", default-features = false }
alloy-signer-trezor = { version = "1.0.22", default-features = false }
alloy-transport = { version = "1.0.22", default-features = false }
alloy-transport-http = { version = "1.0.22", default-features = false }
alloy-transport-ipc = { version = "1.0.22", default-features = false }
alloy-transport-ws = { version = "1.0.22", default-features = false }

alloy-dyn-abi = { version = "1.2.1", features = ["eip712"] }
alloy-json-abi = "1.2.1"
alloy-primitives = { version = "1.4.1", features = [
    "getrandom",
    "rand",
    "map-fxhash",
    "map-foldhash",
    "map-indexmap",
] }
alloy-sol-macro-expander = "1.2.1"
alloy-sol-macro-input = "1.2.1"
alloy-sol-types = "1.3.1"
syn-solidity = "=0.8.25"

alloy-chains = "0.2.6"
alloy-rlp = { version = "0.3.12", features = ["derive"] }
alloy-trie = "0.9.0"

## misc
anyhow = { version = "1.0.89", default-features = false }
arrayvec = "0.7"
auto_impl = { version = "1.2", default-features = false }
dunce = "1"
dyn-clone = { version = "1.0.13", default-features = false }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "3.2.20", features = ["derive"] }
ciborium = "0.2"
color-eyre = "0.6"
derive_more = { version = "2", default-features = false }
derive-where = { version = "1.6.0", default-features = false }
evm-disassembler = "0.5"
eyre = "0.6"
flate2 = "1.1"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
itertools = "0.12"
jsonpath_lib = "0.3"
k256 = "0.13"
log = { version = "0.4.17", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
paste = { version = "1.0.14", default-features = false }
proptest = "1.7.0"
regex = { version = "1", default-features = false }
semver = { version = "1.0.26", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
similar-asserts = "1.7"
rand = "0.9"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive", "std"] }
# Arbitrary precision is needed by the `parseJson` cheatcode and preserve order is needed by `edr_solidity`.
# The features are listed here instead of in the Cargo.toml of those packages to avoid surprises from feature unification.
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "preserve_order",
    "std",
] }
strum = "0.26"
thiserror = { version = "1.0.58", default-features = false }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
vergen = { version = "8", default-features = false }
indexmap = "2.2"
tikv-jemallocator = "0.5.4"
num-format = "0.4.4"
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
tempfile = "3.10"
tokio = "1"
uuid = { version = "1.17", default-features = false, features = ["serde", "std", "v4"] }
walkdir = "2"

hyper = "1.0"
reqwest = { version = "0.12", default-features = false }
tower = "0.4"
tower-http = "0.5"
axum = "0.8"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "warn"
bool-to-int-with-if = "warn"
cast_lossless = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items-after-statements = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual-assert = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_closure_for_method_calls = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard-imports = "warn"
zero_sized_map_values = "warn"
