# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: Copyright 2021 contributors to the Rethnet project.

[package]
name = "rethnet-jsonrpc"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Karim Agha <karim.dev@gmail.com>"]

[dependencies]
rethnet = { path = "../" }

[dev-dependencies]
hex-literal = "0.3.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jsonrpc-host"
path = "src/main.rs"